@@ -34,6 +34,8 @@ PHP                                                                        NEWS
 
 - Standard:
   . Fixed bug GH-17403 (Potential deadlock when putenv fails). (nielsdos)
+  . Fixed bug GH-18509 (Dynamic calls to assert() ignore zend.assertions).
+    (timwolla)
 
 - Windows:
   . Fix leak+crash with sapi_windows_set_ctrl_handler(). (nielsdos)
